@@ -200,7 +200,7 @@ data SAction = SAction
     ,pool :: Pool
     ,timestamp :: IO Time
     ,ruleinfo :: Map.HashMap TypeRep RuleInfo
-    ,output :: String -> IO ()
+    ,output :: Verbosity -> String -> IO ()
     ,verbosity :: Verbosity
     ,diagnostic :: String -> IO ()
     -- stack variables
@@ -226,10 +226,10 @@ run opts@ShakeOptions{..} rs = do
 
     outputLocked <- do
         lock <- newLock
-        return $ withLock lock . putStrLn
+        return $ \v msg -> withLock lock $ shakeOutput v msg
 
-    let diagnostic = if shakeVerbosity >= Diagnostic then outputLocked . ("% "++) else const $ return ()
-    let output = outputLocked . abbreviate shakeAbbreviations
+    let diagnostic = if shakeVerbosity >= Diagnostic then outputLocked Diagnostic . ("% "++) else const $ return ()
+    let output v = outputLocked v . abbreviate shakeAbbreviations
 
     except <- newVar (Nothing :: Maybe SomeException)
     let staunch act | not shakeStaunch = act >> return ()
@@ -239,7 +239,7 @@ run opts@ShakeOptions{..} rs = do
                 Left err -> do
                     modifyVar_ except $ \v -> return $ Just $ fromMaybe err v
                     let msg = show err ++ "Continuing due to staunch mode, this error will be repeated later"
-                    when (shakeVerbosity >= Quiet) $ output msg
+                    when (shakeVerbosity >= Quiet) $ output Quiet msg
                 Right _ -> return ()
 
     let ruleinfo = createRuleinfo shakeAssume rs
@@ -252,7 +252,7 @@ run opts@ShakeOptions{..} rs = do
                 mapM_ (addPool pool . staunch . wrapStack (return []) . runAction s0) (actions rs)
             when shakeLint $ do
                 checkValid database (runStored ruleinfo)
-                when (shakeVerbosity >= Loud) $ output "Lint checking succeeded"
+                when (shakeVerbosity >= Loud) $ output Loud "Lint checking succeeded"
             when (isJust shakeReport) $ do
                 let file = fromJust shakeReport
                 json <- showJSON database
@@ -376,20 +376,20 @@ traced msg act = do
     return res
 
 
-putWhen :: (Verbosity -> Bool) -> String -> Action ()
-putWhen f msg = do
+putWhen :: Verbosity -> String -> Action ()
+putWhen v msg = do
     s <- Action State.get
-    when (f $ verbosity s) $
-        liftIO $ output s msg
+    when (verbosity s >= v) $
+        liftIO $ output s v msg
 
 
 -- | Write a message to the output when the verbosity ('shakeVerbosity') is appropriate.
 --   The output will not be interleaved with any other Shake messages
 --   (other than those generated by system commands).
 putLoud, putNormal, putQuiet :: String -> Action ()
-putLoud = putWhen (>= Loud)
-putNormal = putWhen (>= Normal)
-putQuiet = putWhen (>= Quiet)
+putLoud = putWhen Loud
+putNormal = putWhen Normal
+putQuiet = putWhen Quiet
 
 
 -- | Get the current verbosity level, as set by 'shakeVerbosity'. If you
